RESOLVED FIXED87366
[GTK] Wrong cursor used for ne-resize
https://bugs.webkit.org/show_bug.cgi?id=87366
Summary [GTK] Wrong cursor used for ne-resize
Claudio Saavedra
Reported 2012-05-24 03:44:25 PDT
This bug was originally filed in https://bugzilla.gnome.org/show_bug.cgi?id=676559 It can be tested with http://julien.olivier.free.fr/test.html . The fix is a one-liner in CursorGtk.cpp.
Attachments
[Gtk] Wrong cursor used for ne-resize https://bugs.webkit.org/show_bug.cgi?id=87366 (2.11 KB, patch)
2012-05-24 03:56 PDT, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2012-05-24 03:56:32 PDT
Created attachment 143779 [details] [Gtk] Wrong cursor used for ne-resize https://bugs.webkit.org/show_bug.cgi?id=87366 Reviewed by NOBODY (OOPS!). * platform/gtk/CursorGtk.cpp: (WebCore::Cursor::ensurePlatformCursor): Use GDK_TOP_RIGHT_CORNER for Cursor::NorthEastPanning.
Eric Seidel (no email)
Comment 2 2012-05-24 08:53:57 PDT
Comment on attachment 143779 [details] [Gtk] Wrong cursor used for ne-resize https://bugs.webkit.org/show_bug.cgi?id=87366 OK. LGTM.
WebKit Review Bot
Comment 3 2012-05-24 10:19:46 PDT
Comment on attachment 143779 [details] [Gtk] Wrong cursor used for ne-resize https://bugs.webkit.org/show_bug.cgi?id=87366 Clearing flags on attachment: 143779 Committed r118389: <http://trac.webkit.org/changeset/118389>
WebKit Review Bot
Comment 4 2012-05-24 10:19:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.