[Gtk] Wrong cursor used for ne-resize https://bugs.webkit.org/show_bug.cgi?id=87366

Patch by Claudio Saavedra <csaavedra@igalia.com> on 2012-05-24
Reviewed by Eric Seidel.

* platform/gtk/CursorGtk.cpp:
(WebCore::Cursor::ensurePlatformCursor): Use GDK_TOP_RIGHT_CORNER
for Cursor::NorthEastPanning.

Canonical link: https://commits.webkit.org/105157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118389 268f45cc-cd09-0410-ab3c-d52691b4dbfc